--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li><a href="https://web124213.github.io/WebTechnologies/forms_dom.html" target="_blank">Forms Homework</a></li>
             <li><a href="https://web124213.github.io/WebTechnologies/domashno_lekciq/domrab2.html" target="_blank">Homework Lection</a></li>
             <li><a href="https://web124213.github.io/WebTechnologies/homework-30-10.html" target="_blank">Homework 30.10</a></li>
+            <li><a href="https://web124213.github.io/WebTechnologies/pacific-homework/pacific.html" target="_blank">Homework Pacific</a></li>
         </ul>
         <footer>
             <p>Created by Dayana Yordanova - 124213</p>
